test/testdata/result/invalid_unary_op_error.lox
-(try 1); // error: '-' operator cannot be used with type 'result'
